fixed overflow

--- a/website/app/client/templates/footer/footer.scss
+++ b/website/app/client/templates/footer/footer.scss
@@ -2,6 +2,7 @@
 /* Footer: Style */
 /*****************************************************************************/
 .footer {
+	z-index: -10;
 	.page-footer {
 		padding:0;
 		background-color:#2196F3;
